[package]
name = "sui-mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui"}
sui-types = { git = "https://github.com/MystenLabs/sui"}
sui-keys = { git = "https://github.com/MystenLabs/sui"}
tokio = "1.32.0"
fastcrypto = "0.1.6"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde = "1.0.193"
reqwest = "0.11.24"
url = "2.5.0"
log = "0.4.19"
env_logger = { version = "0.10.0", features = [] }
